--- a/index.css
+++ b/index.css
@@ -370,49 +370,76 @@ input {
 /*  */
 
 
-.section-partners {
+.section--partners {
   background-color: var(--bgBlack);
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   gap: 7rem;
-  padding: 7rem 0 12rem;
-  .partner {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 30rem;
-    position: relative;
-    cursor: pointer;
-    &::after {
-      position: absolute;
-      top: 0;
-      left: 100%;
-      content: "";
-      display: inline-flex;
-      width: 8.1547rem;
-      height: 8.1547rem;
-      background: url(images/ico_partner_hover.svg);
-    }
-    .icon--text {
-      color: #FFF;
-      text-align: center;
-      font-family: Heebo;
-      font-size: 1.6rem;
-      font-style: normal;
-      font-weight: 700;
-      line-height: 2.8rem; /* 175% */
-      letter-spacing: 0.08rem;
-      text-transform: uppercase;
-      position: absolute;
-      bottom: 2rem;
-      left: 50%;
-      white-space: nowrap;
-      transform: translate(-50%, 0);
-    }
+  padding: 12rem 8.5rem 0;
+}
+.partners__partner {
+  display: flex;
+  height: fit-content;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  cursor: pointer;
+}
+.partners__partner img {
+  width: 100%;
+  height: 100%;
+}
+.partners__partner::after {
+  position: absolute;
+  top: 0;
+  left: 100%;
+  transform: translate(0, -100%);
+  content: "";
+  display: inline-flex;
+  width: 8.3rem;
+  height: 8.3rem;
+  background: url(images/ico_partner_hover.svg);
+}
+.partner__text {
+  color: #FFF;
+  text-align: center;
+  font-family: Heebo;
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 2.8rem; /* 175% */
+  letter-spacing: 0.08rem;
+  text-transform: uppercase;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  white-space: nowrap;
+  transform: translate(-50%, 110%);
+}
+@media all and (max-width: 1300px)  {
+  .partners__partner::after {
+    display: none;
   }
 }
 
+@media all and (max-width: 800px)  {
+  .section--partners {
+    display: grid;
+    align-items: end;
+    justify-content: center;
+    grid-template-columns: repeat(3, minmax(auto, 10rem));
+    column-gap: 8rem;
+    row-gap: 4rem;
+    padding: 4rem 4rem;
+  }
+  .partners__partner:nth-last-of-type(3n) {
+  }
+  .partner__text {
+    /* display: none; */
+    font-size: 1.3rem;
+  }
+}
 .section-video {
   width: 100%;
   height: 90rem;
