--- a/global.css
+++ b/global.css
@@ -111,7 +111,7 @@ header {
   padding: 0 3.2rem;
 }
 header > h1 { margin: 3.25rem ;}
-header > h1 > img { width: 13.5rem; height: 2.5rem; }
+header > h1 > a > img { width: 13.5rem; height: 2.5rem; }
 header > .gnb {
   position: absolute;
   top: 50%;
