--- a/index.css
+++ b/index.css
@@ -376,7 +376,7 @@ input {
   justify-content: space-between;
   align-items: center;
   gap: 7rem;
-  padding: 12rem 8.5rem 0;
+  padding: 12rem 8.5rem;
 }
 .partners__partner {
   display: flex;
@@ -433,56 +433,65 @@ input {
     row-gap: 4rem;
     padding: 4rem 4rem;
   }
-  .partners__partner:nth-last-of-type(3n) {
-  }
   .partner__text {
-    /* display: none; */
     font-size: 1.3rem;
   }
 }
-.section-video {
+
+.section--video {
   width: 100%;
-  height: 90rem;
+  aspect-ratio: 1920/900;
+  max-height: 90rem;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: end;
   background: url(images/video_bg_img.png) no-repeat;
   position: relative;
-  > img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 96rem;
-    height: 60rem;
+}
+.section--video > img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  height: 100%;
+}
+.video__btn--play {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  border: 1px solid white;
+  border-radius: 50%;
+  z-index: 3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20rem;
+  height: 20rem;
+}
+.video__btn--play > span {
+  color: var(--fontWhite);
+  font-family: var(--font);
+  font-size: 1.4rem;
+  font-weight: 700;
+  position: relative;
+}
+.video__btn--play > span > img {
+  width: 3.2rem;
+  height: 3.3rem;
+  position: absolute;
+  left: 100%;
+  bottom: -50%;
+}
+
+@media all and (max-width: 800px) {
+  .section--video {
+    aspect-ratio: 960/600;
   }
-  .video--play {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    border: 1px solid white;
-    border-radius: 50%;
-    z-index: 3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 20rem;
-    height: 20rem;
-    span {
-      color: var(--fontWhite);
-      font-family: var(--font);
-      font-size: 1.4rem;
-      font-weight: 700;
-      position: relative;
-      img {
-        width: 3.2rem;
-        height: 3.3rem;
-        position: absolute;
-        left: 100%;
-        bottom: -50%;
-      }
-    }
+  .video__btn--play {
+    width: 20vw;
+    height: 20vw;
   }
 }
 
