refactor: make setcion form responisive

--- a/index.css
+++ b/index.css
@@ -260,7 +260,6 @@ input {
   font-weight: 300;
   line-height: 2.8rem; /* 175% */
   letter-spacing: 0.08rem;
-  /* margin-bottom: 3.4rem; */
 }
 .split__button {
   padding: 1.4rem 8.1rem 1.4rem 3.1rem;
@@ -273,9 +272,9 @@ input {
 .split__img { 
   flex: 1;
 }
-/* split first */
+/********* split-first **********/
 .split--first .split__text-wrapper {
-  padding-left:3.5rem;
+  padding-left: 3.5rem;
   margin-right: -3.5rem;
 }
 .split--first .split__img {
@@ -295,9 +294,7 @@ input {
   width: 39rem;
   height: 5.2rem;
 }
-/* split second */
-.split--second {
-}
+/********* split-second **********/
 .split--second .split__text {
   margin-left: 17.2rem;
 }
@@ -319,7 +316,7 @@ input {
   height: 5.2rem;
 }
 
-
+/******* split responsive *******/
 @media all and (max-width: 1300px) {
   .split--first .split__img {
     translate: 0 -6rem;
@@ -337,7 +334,7 @@ input {
   .split--first {
     margin-bottom: 3rem;
   }
-  .split__text-wrapper {
+  .split__text-wrapper,  {
     width: 100%;
   }
   .split__text--lg {
@@ -367,9 +364,10 @@ input {
   }
 }
 
-/*  */
 
-
+/********************************/
+/*       partners section       */
+/********************************/
 .section--partners {
   background-color: var(--bgBlack);
   display: flex;
@@ -417,12 +415,12 @@ input {
   white-space: nowrap;
   transform: translate(-50%, 110%);
 }
+/******* partner responsive *******/
 @media all and (max-width: 1300px)  {
   .partners__partner::after {
     display: none;
   }
 }
-
 @media all and (max-width: 800px)  {
   .section--partners {
     display: grid;
@@ -438,6 +436,10 @@ input {
   }
 }
 
+
+/********************************/
+/*         video section        */
+/********************************/
 .section--video {
   width: 100%;
   aspect-ratio: 1920/900;
@@ -485,6 +487,7 @@ input {
   bottom: -50%;
 }
 
+/******* video responsive *******/
 @media all and (max-width: 800px) {
   .section--video {
     aspect-ratio: 960/600;
@@ -495,80 +498,158 @@ input {
   }
 }
 
-.section-form {
+/********************************/
+/*          form section        */
+/********************************/
+.section--form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 130rem;
+  max-width: 130rem;
+  width: 67.7%;
   margin: 0 auto;
   margin-bottom: 15rem;
-  height: 34.8rem;
-  .title-text {
-    height: 21.6rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    span {
-      color: var(--fontWhite);
-      text-align: center;
-      font-family: var(--font);
-      font-size: 18rem;
-      font-weight: 700;
-      line-height: 21.6rem; /* 120% */
-      text-transform: uppercase;
-      margin-right: 2.5rem;
-    }
-    img {
-      width: 12.7078rem;
-      height: 12.7078rem;
-    }
-    translate: 0 calc(-100% + 13rem);
+}
+/* form title */
+.form__title {
+  height: 21.6rem;  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  translate: 0 calc(-100% + 13rem);
+  white-space: nowrap;
+} 
+.form__title > span {
+  color: var(--fontWhite);
+  text-align: center;
+  font-family: var(--font);
+  font-size: 18rem;
+  font-weight: 700;
+  line-height: 21.6rem; /* 120% */
+  text-transform: uppercase;
+  margin-right: 2.5rem;
+}
+.form__title > img {
+  width: 12.7078rem;
+  height: 12.7078rem;
+}
+/* form lg text */
+.form__text--lg{
+  font-size: 6rem;
+  margin-bottom: 3rem;
+}
+.form__text--lg::before {
+  width: 3.4rem;
+  transform: translate(0,-50%);
+  top: 0.4rem;
+}
+.form__text--lg::after {
+  font-size: 18rem;
+  line-height: 18rem; /* 100% */
+  content: "go!";
+  left: 3.5rem;
+}
+/* form small text */
+.form__text--sm {
+  width: 45.1681rem;
+  height: 2.9rem;
+  color: var(--fontWhite);
+  font-family: var(--font);
+  font-size: 2rem;
+  font-weight: 300;
+  line-height: 3.3rem; /* 165% */
+  text-transform: uppercase;
+  margin-bottom: 5.2rem;
+}
+/* form input */
+.form__input--wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+}
+.form__btn--subscribe {
+  padding: 1.4rem 8.0938rem 1.4rem 3.1rem;
+  color: var(--fontWhite);
+  text-align: center;
+  font-family: var(--font);
+  font-size: 1.3rem;
+  font-weight: 700;
+  line-height: 2.6rem; /* 200% */
+  letter-spacing: 0.13rem;
+  text-transform: uppercase;
+}
+/* responsive */
+@media all and (max-width: 1300px) {
+  .form__title {
+    height: fit-content;
+    translate: 0 calc(-100% + 11rem);
+  } 
+  .form__title > span {
+    font-size: 16rem;
+    line-height: 120%;
   }
-  .lg-text {
-    font-size: 6rem;
-    margin-bottom: 3rem;
-    &::before {
-      width: 3.4rem;
-      transform: translate(0,-50%);
-      top: 0.4rem;
-    }
-    &::after {
-      font-size: 18rem;
-      line-height: 18rem; /* 100% */
-      content: "go!";
-      left: 3.5rem;
-    }
+  .form__title > img {
+    width: 11.1125rem;
+    height: 11.1125rem;
   }
-  .sm-text {
-      width: 45.1681rem;
-      height: 2.9rem;
-      color: var(--fontWhite);
-      font-family: var(--font);
-      font-size: 2rem;
-      font-weight: 300;
-      line-height: 3.3rem; /* 165% */
-      text-transform: uppercase;
-      margin-bottom: 5.2rem;
-  }
-  .input-wrapper {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
-
-    #btn-subscribe {
-      padding: 1.4rem 8.0938rem 1.4rem 3.1rem;
-      color: var(--fontWhite);
-      text-align: center;
-      font-family: var(--font);
-      font-size: 1.3rem;
-      font-weight: 700;
-      line-height: 2.6rem; /* 200% */
-      letter-spacing: 0.13rem;
-      text-transform: uppercase;
-    }
+  .form__text--lg::after {
+    left: 0;
   }
 }
+@media all and (max-width: 800px) {
+  .form__title {
+  translate: 0 calc(-100% + 10vw);
+  } 
+  .form__title > span { 
+    font-size: 15vw;
+  }
+  .form__title > img {
+    height: 10.42vw;
+    width:  10.42vw;
+  }
+  .form__text--lg{
+    font-size: clamp(4rem, 6vw ,6rem);
+    margin-bottom: 6rem;
+  }
+  .form__text--lg::before {
+    width: 2.8rem;
+    transform: translate(0,-50%);
+    top: 0.4rem;
+  }
+  .form__text--lg::after {
+    font-size: 14rem;
+    line-height: 14rem; /* 100% */
+  }
+  .form__text--sm {
+    max-width: 45.1681rem;
+    width: 80vw;
+    text-align: center;
+    height: 2.9rem;
+    font-size: 2rem;
+    line-height: 165%;
+    margin-bottom: 8rem;
+  }
+  .form__input--wrapper {
+    max-width: 30rem;
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .section-map  {
   width: 100%;
