--- a/index.css
+++ b/index.css
@@ -60,40 +60,42 @@ button { cursor: pointer; }
   text-transform: uppercase;
   margin-bottom: 1.4rem;
   position: relative;
-  &::before {
-    content: "";
-    background-image: url(images/ico_plus.svg);
-    background-size: cover;
-    background-position: center;
-    width: 2.6rem;
-    height: 4rem;
-    display: inline-block;
-    position: absolute;
-    left: -0.8rem;
-    top: 0.1rem;
-    translate: -100% 0;
-  }
-  &::after {
-    content: "";
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: #404040;
-    font-family: var(--altFont);
-    font-size: 11.2rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 11.2rem; /* 100% */
-    text-transform: uppercase;
-    color: transparent;
-    position: absolute;
-    height: 14.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top: -4.5rem;
-    left: -7rem;
-    z-index: -1;
-  }
+  z-index: 2;
 }
+.lg-text::before {
+  content: "";
+  background-image: url(images/ico_plus.svg);
+  background-size: cover;
+  background-position: center;
+  width: 2.6rem;
+  height: 4rem;
+  display: inline-block;
+  position: absolute;
+  left: -0.8rem;
+  top: 0.1rem;
+  translate: -100% 0;
+}
+.lg-text::after {
+  content: "";
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #404040;
+  font-family: var(--altFont);
+  font-size: 11.2rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 11.2rem; /* 100% */
+  text-transform: uppercase;
+  color: transparent;
+  position: absolute;
+  height: 14.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: -4.5rem;
+  left: -7rem;
+  z-index: -1;
+}
+
 .btn--arrow {
   position: relative;
   display: inline-flex;
@@ -103,31 +105,28 @@ button { cursor: pointer; }
   cursor: pointer;
   color: var(--fontWhite);
   font-family: var(--font);
-  
-  &::after{
-    content: "";
-    background: url("images/ico_viewMore.svg") no-repeat;
-    background-position: center center;
-    display: flex;
-    justify-self: center;
-    align-items: center;
-    width: 5.4rem;
-    height: 5.4rem;
-    border-radius: 50%;
-    position: absolute;
-    right: 0;
-    top: -.1rem;
-    border: 1px solid var(--fontWhite);
-    transform: rotate(0deg);
-    transition: transform 1s ease;
-  }
-
-  &:hover {
-    &::after {
-      transform: rotate(45deg);
-    }
-  }
 }
+.btn--arrow::after{
+  content: "";
+  background: url("images/ico_viewMore.svg") no-repeat;
+  background-position: center center;
+  display: flex;
+  justify-self: center;
+  align-items: center;
+  width: 5.4rem;
+  height: 5.4rem;
+  border-radius: 50%;
+  position: absolute;
+  right: 0;
+  top: -.1rem;
+  border: 1px solid var(--fontWhite);
+  transform: rotate(0deg);
+  transition: transform 1s ease;
+}
+.btn--arrow:hover::after {
+  transform: rotate(45deg);
+}
+
 input {
   color: white;
   background-color: transparent;
@@ -152,7 +151,7 @@ input {
   width: 100%;
   height: calc(100vh - 9rem);
 }
-.slider__slide  {}
+
 .slider__slide--information  {
   box-sizing: border-box;
   width: 100%;
@@ -176,6 +175,7 @@ input {
   max-width: 19.4rem;
   max-height: 19.4rem;
 }
+
 .slide__small-text {
   margin-left: 3rem;
   color: var(--fontWhite);
@@ -201,6 +201,7 @@ input {
   text-transform: uppercase;
   margin-bottom: 7rem;
 }
+
 .slider__bullet {
   position: absolute;
   bottom: 1rem;
@@ -241,6 +242,7 @@ input {
   display: flex;
   justify-content: space-between;
 }
+
 .split__text-wrapper {
   flex: 1;
   display: flex;
@@ -261,6 +263,7 @@ input {
   line-height: 2.8rem; /* 175% */
   letter-spacing: 0.08rem;
 }
+
 .split__button {
   padding: 1.4rem 8.1rem 1.4rem 3.1rem;
   font-size: 1.3rem;
@@ -269,6 +272,7 @@ input {
   letter-spacing: 0.13rem;
   text-transform: uppercase;
 }
+
 .split__img { 
   flex: 1;
 }
@@ -277,6 +281,7 @@ input {
   padding-left: 3.5rem;
   margin-right: -3.5rem;
 }
+
 .split--first .split__img {
   display: flex;
   align-items: flex-start;
@@ -287,6 +292,7 @@ input {
   max-width: 51.8rem;
   width: 100%;
 }
+
 .split--first .split__text--lg::after {
   content: "STRONG";
 }
@@ -298,6 +304,7 @@ input {
 .split--second .split__text {
   margin-left: 17.2rem;
 }
+
 .split--second .split__img {
   display: flex;
   align-items: center;
@@ -308,6 +315,7 @@ input {
   max-width: 51.8rem;
   width: 100%;
 }
+
 .split--second .split__text--lg::after {
   content: "Start";
 }
@@ -399,6 +407,7 @@ input {
   height: 8.3rem;
   background: url(images/ico_partner_hover.svg);
 }
+
 .partner__text {
   color: #FFF;
   text-align: center;
@@ -415,12 +424,14 @@ input {
   white-space: nowrap;
   transform: translate(-50%, 110%);
 }
+
 /******* partner responsive *******/
 @media all and (max-width: 1300px)  {
   .partners__partner::after {
     display: none;
   }
 }
+
 @media all and (max-width: 800px)  {
   .section--partners {
     display: grid;
@@ -458,6 +469,7 @@ input {
   transform: translate(-50%,-50%);
   height: 100%;
 }
+
 .video__btn--play {
   position: absolute;
   top: 50%;
@@ -510,7 +522,7 @@ input {
   margin: 0 auto;
   margin-bottom: 15rem;
 }
-/* form title */
+
 .form__title {
   height: 21.6rem;  
   display: flex;
@@ -533,7 +545,7 @@ input {
   width: 12.7078rem;
   height: 12.7078rem;
 }
-/* form lg text */
+
 .form__text--lg{
   font-size: 6rem;
   margin-bottom: 3rem;
@@ -549,7 +561,7 @@ input {
   content: "go!";
   left: 3.5rem;
 }
-/* form small text */
+
 .form__text--sm {
   width: 45.1681rem;
   height: 2.9rem;
@@ -561,13 +573,14 @@ input {
   text-transform: uppercase;
   margin-bottom: 5.2rem;
 }
-/* form input */
+
 .form__input--wrapper {
   width: 100%;
   display: flex;
   justify-content: center;
   gap: 2rem;
 }
+
 .form__btn--subscribe {
   padding: 1.4rem 8.0938rem 1.4rem 3.1rem;
   color: var(--fontWhite);
@@ -579,7 +592,8 @@ input {
   letter-spacing: 0.13rem;
   text-transform: uppercase;
 }
-/* responsive */
+
+/******* form responsive *******/
 @media all and (max-width: 1300px) {
   .form__title {
     height: fit-content;
@@ -597,6 +611,7 @@ input {
     left: 0;
   }
 }
+
 @media all and (max-width: 800px) {
   .form__title {
   translate: 0 calc(-100% + 10vw);
@@ -614,7 +629,7 @@ input {
   }
   .form__text--lg::before {
     width: 2.8rem;
-    transform: translate(0,-50%);
+    transform: translate(0,0);
     top: 0.4rem;
   }
   .form__text--lg::after {
@@ -625,8 +640,6 @@ input {
     max-width: 45.1681rem;
     width: 80vw;
     text-align: center;
-    height: 2.9rem;
-    font-size: 2rem;
     line-height: 165%;
     margin-bottom: 8rem;
   }
@@ -638,67 +651,104 @@ input {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-.section-map  {
+/********************************/
+/*          map section        */
+/********************************/
+.section--map  {
   width: 100%;
-  height: 60rem;
+  max-height: 90rem;
+  height: 30vw;
   background-color: var(--bgBlack);
   display: flex;
-  .map-container {
-    width: 50%;
-    img  {
-      width: 100%;
-      height: 100%;
-    }
-  }
-  .text-wrapper {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
+  justify-content: space-between;
+  gap: 2rem;
+}
+.map__map--wrapper {
+  flex: 1;
+}
+.map__map--wrapper img {
+  width: 100%;
+  object-fit: contain;
+}
+.map__text--wrapper {
+  flex: 1;
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; 
+}
+.map__text--lg::after {
+  font-size: 11.2rem;
+  line-height: 11.2rem; /* 100% */
+  content: "look";
+  left: 3.5rem;
+}
+.map__text--sm {
+  color: #C4C4C4;
+  text-align: center;
+  font-family: var(--font);
+  font-size: 1.6rem;
+  font-weight: 300;
+  line-height: 2.8rem; /* 175% */
+  letter-spacing: 0.08rem;
+  margin-bottom: 3.7rem;
+}
+.map__btn--view-more {
+  display: inline-flex;
+  padding: 1.4rem 8rem 1.4rem 3.2rem;
+  font-size: 1.3rem;
+  font-weight: 700;
+  line-height: 2.6rem; /* 200% */
+  letter-spacing: 0.13rem;
+  text-transform: uppercase;
+}
+/* responsive */
+@media all and  (max-width: 1300px) {}
+@media all and  (max-width: 800px) {
+  .section--map  {
+    flex-direction: column-reverse;
+    width: 100%;
+    padding: 4rem 0;
+    height: fit-content;
     justify-content: center;
     align-items: center;
-    .lg-text {
-      &&::after {
-        font-size: 11.2rem;
-        line-height: 11.2rem; /* 100% */
-        content: "look";
-        left: 3.5rem;
-      }
-    }
-    .sm-text  {
-      color: #C4C4C4;
-      text-align: center;
-      font-family: var(--font);
-      font-size: 1.6rem;
-      font-weight: 300;
-      line-height: 2.8rem; /* 175% */
-      letter-spacing: 0.08rem;
-      margin-bottom: 3.7rem;
-    }
-    .btn-viewMore {
-      display: inline-flex;
-      padding: 1.4rem 8rem 1.4rem 3.2rem;
-      font-size: 1.3rem;
-      font-weight: 700;
-      line-height: 2.6rem; /* 200% */
-      letter-spacing: 0.13rem;
-      text-transform: uppercase;
-    }
+    gap: 4rem;
   }
-}
+  .map__text--lg{
+    font-size: clamp(4rem, 6vw ,6rem);
+    margin-bottom: 6rem;
+  }
+  .map__text--lg::before {
+    width: 2.8rem;
+    top: 0.4rem;
+  }
+  .map__text--lg::after {
+    font-size: 14rem;
+    line-height: 14rem; /* 100% */
+  }
+  .map__map--wrapper {
+    padding: 0 10%;
+  }
+  .map__map--wrapper img {
+    height: 100%;
+    object-fit: contain;
+  }
+  .map__text--lg {
+    margin-bottom: 4rem;
+  }
+  .map__text--sm {
+    width: 70%;
+  }
+  .map__btn--view-more {
+    width: 47.6%;
+  }
+} 
 
+
+/********************************/
+/*        family section        */
+/********************************/
 .section-family {
   /* margin-top: 13.2rem; */
   display: flex;
