--- a/index.css
+++ b/index.css
@@ -42,10 +42,6 @@ body {
 button { cursor: pointer; }
 * {
   user-select: none;
-  -webkit-user-drag: none;
-  -moz-user-drag: none;
-  -ms-user-drag: none;
-  user-drag: none;
 }
 
 /********************************/
@@ -705,6 +701,7 @@ input {
 }
 /* responsive */
 @media all and  (max-width: 1300px) {}
+
 @media all and  (max-width: 800px) {
   .section--map  {
     flex-direction: column-reverse;
@@ -749,49 +746,77 @@ input {
 /********************************/
 /*        family section        */
 /********************************/
-.section-family {
-  /* margin-top: 13.2rem; */
+.section--family {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 80rem;
-  .lg-text {
-    font-size: 6rem;
-    /* margin-bottom: 3rem; */
-    line-height: 7.2rem; /* 120% */
-    &::before {
-      width: 3.4rem;
-      transform: translate(0,-50%);
-      top: 1.5rem;
-    }
-    &&::after {
-      font-size: 18rem;
-      line-height: 18rem; /* 100% */
-      content: "part";
-      left: 50%;
-      transform: translate(-50%, 0);
-    }
+}  
+.family__text--wrapper {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.family__text--lg{
+  text-align: center;
+  font-size: 6rem;
+  line-height: 7.2rem; /* 120% */
+}
+.family__text--lg::before {
+  width: 3.4rem;
+  transform: translate(0,-50%);
+  top: 1.5rem;
+}
+.family__text--lg::after {
+  font-size: 18rem;
+  line-height: 18rem; /* 100% */
+  content: "part";
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+.family__text--sm {
+  color: var(--fontWhite);
+  font-family: var(--font);
+  font-size: 2rem;
+  font-weight: 300;
+  line-height: 3.3rem; /* 165% */
+  text-transform: uppercase;
+  margin-bottom: 6.2rem;
+}
+  
+.family__image--wrapper {
+  width: 100%;
+  display: flex;
+  gap: 2.6rem;
+  overflow: hidden;
+  height: 48rem;
+}
+/* responsive */
+@media all and (max-width: 1300px) {}
+@media all and (max-width: 800px) {
+
+  .family__text--lg{
+    font-size: clamp(4rem, 6vw ,6rem);
+    margin-bottom: 6rem;
   }
-  .sm-text {
-    color: var(--fontWhite);
-    font-family: var(--font);
-    font-size: 2rem;
-    font-weight: 300;
-    line-height: 3.3rem; /* 165% */
-    text-transform: uppercase;
-    margin-bottom: 6.2rem;
+  .family__text--lg::before {
+    width: 2.8rem;
+    top: 0.4rem;
   }
-  .image-wrapper {
-    width: 100%;
-    display: flex;
-    gap: 2.6rem;
-    overflow: hidden;
-    height: 48rem;
+  .family__text--lg::after {
+    font-size: 14rem;
+    line-height: 14rem; /* 100% */
+    transform: translate();
   }
 }
 
+/********************************/
+/*          bmi section         */
+/********************************/
 .section-bmi {
   width: 130rem;
   height: 72.5rem;
